tests/baselines/reference/interfaceExtendingClassWithPrivates.errors.txt
interfaceExtendingClassWithPrivates.ts(5,11): error TS2430: Interface 'I' incorrectly extends interface 'Foo'.
  Property 'x' is private in type 'Foo' but not in type 'I'.
interfaceExtendingClassWithPrivates.ts(14,9): error TS2454: Variable 'i' is used before being assigned.
interfaceExtendingClassWithPrivates.ts(15,10): error TS2454: Variable 'i' is used before being assigned.
interfaceExtendingClassWithPrivates.ts(15,12): error TS2341: Property 'x' is private and only accessible within class 'Foo'.


==== interfaceExtendingClassWithPrivates.ts (4 errors) ====
    class Foo {
        private x: string;
    }
    
    interface I extends Foo { // error
              ~
!!! error TS2430: Interface 'I' incorrectly extends interface 'Foo'.
!!! error TS2430:   Property 'x' is private in type 'Foo' but not in type 'I'.
        x: string;
    }
    
    interface I2 extends Foo {
        y: string;
    }
    
    var i: I2;
    var r = i.y;
            ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2 = i.x; // error
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
               ~
!!! error TS2341: Property 'x' is private and only accessible within class 'Foo'.